@@ -14,7 +14,7 @@
 #include <windows.h>
 
 
-static int /*__MINGW_ATTRIB_NONNULL(1)*/
+static int __MINGW_ATTRIB_NONNULL(1)
  __wcrtomb_cp (char *dst, wchar_t wc, const unsigned int cp,
 	       const unsigned int mb_max)
 {       
@@ -32,9 +32,9 @@ static int /*__MINGW_ATTRIB_NONNULL(1)*/
     {
       int invalid_char = 0;
    
-      int size = WideCharToMultiByte(cp, 0 /* Is this correct flag? */,
-				     &wc, 1, dst, mb_max,
-				     NULL, &invalid_char);
+      int size = WideCharToMultiByte (cp, 0 /* Is this correct flag? */,
+				      &wc, 1, dst, mb_max,
+				      NULL, &invalid_char);
       if (size == 0 || invalid_char)  
         {
           errno = EILSEQ;
@@ -45,7 +45,7 @@ static int /*__MINGW_ATTRIB_NONNULL(1)*/
 }
 
 size_t
-wcrtomb (char *dst, wchar_t wc, mbstate_t * ps __attribute__ ((__unused__)))
+wcrtomb (char *dst, wchar_t wc, mbstate_t * __UNUSED_PARAM (ps))
 {
   char byte_bucket [MB_LEN_MAX];
   char* tmp_dst = dst ? dst : byte_bucket;      
@@ -54,20 +54,20 @@ wcrtomb (char *dst, wchar_t wc, mbstate_t * ps __attribute__ ((__unused__)))
 }
 
 size_t wcsrtombs (char *dst, const wchar_t **src, size_t len,
-		  mbstate_t * ps __attribute__ ((__unused__)))
+		  mbstate_t * __UNUSED_PARAM (ps))
 {
   int ret = 0;
   size_t n = 0;
   const unsigned int cp = get_codepage();
   const unsigned int mb_max = MB_CUR_MAX;
-  const wchar_t *pwc;
-
+  const wchar_t *pwc = *src;
+  
   if (src == NULL || *src == NULL) /* undefined behavior */
      return 0;
-  pwc = *src;
+
   if (dst != NULL)
     {
-      while (n < len)
+       while (n < len)
         {
           if ((ret = __wcrtomb_cp (dst, *pwc, cp, mb_max)) <= 0)
 	     return (size_t) -1;
@@ -75,7 +75,7 @@ size_t wcsrtombs (char *dst, const wchar_t **src, size_t len,
    	  dst += ret;
           if (*(dst - 1) == '\0')
 	    {
-	      *src = (wchar_t *) NULL;
+	      *src = (wchar_t*) NULL;;
 	      return (n  - 1);
 	    }
 	  pwc++;
@@ -96,5 +96,6 @@ size_t wcsrtombs (char *dst, const wchar_t **src, size_t len,
           pwc++;
         }
     }
+ 
   return n;
 }
